--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.athira.sahapaadi">
 
     <application
+        android:name=".AppController"
         android:allowBackup="true"
         android:icon="@drawable/sp"
         android:label="@string/app_name"
@@ -18,7 +19,7 @@
         </activity>
         <activity android:name=".ProfileUpdate" />
         <activity android:name=".HomePage" />
-        <activity android:name=".LoginDetails"></activity>
+        <activity android:name=".LoginDetails"/>
     </application>
 
 </manifest>
