--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "http://dl.bintray.com/glomadrian/maven" }
+        maven { url "https://jitpack.io" }
     }
 }
 
